# SatFinder

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  FT4FT8_IMPLEMENTATION.md  README.mk  VERSION_0.3.md  build.gradle.kts  create_tag_v0.3.bat  settings.gradle.kts
app/: build.gradle.kts
app/libs/: README.txt
app/src/androidTest/java/support/hb9hci/satfinder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sgp4_jni.cpp
app/src/main/java/support/hb9hci/satfinder/: ArrowViewHelper.kt  FT4FT8Activity.kt  FT8SignalProcessor.kt  IntentDataHelper.kt  LifecycleHelper.kt  LocationHelper.kt  MainActivity.kt  MapHelper.kt  OverlayViewHelper.kt  PermissionHelper.kt  PreferencesHelper.kt  SatMath.kt  SatMathUtil.kt  SatelliteCalculationHelper.kt  SatelliteDirectionHelper.kt  SatelliteMathHelper.kt  SatelliteSelectionActivity.kt  SensorHelper.kt  Sgp4Native.kt  Sgp4Util.kt  SimplifiedMainActivity.kt  TleHelper.kt  UIHelper.kt  ValidationHelper.kt
app/src/main/java/support/hb9hci/satfinder/sgp4/: Sgp4Core.kt
app/src/main/res/drawable/: arrow_horizontal.xml  arrow_vertical.xml  ic_arrow_azimuth.xml  ic_arrow_elevation.xml  ic_arrow_line.xml
app/src/main/res/layout/: activity_ft4ft8.xml  activity_main.xml  activity_satellite_selection.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/support/hb9hci/satfinder/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
